--- a/src/app/simulacion/simulacion.component.html
+++ b/src/app/simulacion/simulacion.component.html
@@ -1,2 +1,11 @@
-<p>simulacion works!</p>
-<h1>Simulacion</h1>
+<!DOCTYPE html>
+<html lang="es"> <!-- Puedes cambiar "es" por el código de idioma que desees -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simulacion</title>
+</head>
+<body>
+      
+</body>
+</html>
