--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,1 +1,11 @@
-<p>form works!</p>
+<!DOCTYPE html>
+<html lang="es"> <!-- Puedes cambiar "es" por el código de idioma que desees -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulario</title>
+</head>
+<body>
+      
+</body>
+</html>
