--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,11 @@
-<p>welcome works!</p>
+<!DOCTYPE html>
+<html lang="es"> <!-- Puedes cambiar "es" por el código de idioma que desees -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome</title>
+</head>
+<body>
+      
+</body>
+</html>
