--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,11 +1,128 @@
 <!DOCTYPE html>
-<html lang="es"> <!-- Puedes cambiar "es" por el código de idioma que desees -->
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome</title>
+    <style>
+ 
+        header {
+            background-image: url('LogoUMSS.png'); /* Reemplaza con la ruta de tu imagen */
+            background-size: 50%;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 300px; /* Ajusta la altura del encabezado según tus necesidades */
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff; /* Color del texto para asegurar la legibilidad en el fondo */
+            margin: 0;
+        }
+        body {
+
+            font-family: 'Raleway', sans-serif;
+            background: radial-gradient(circle at 50% 50%, #C20000, #003770), repeating-radial-gradient(circle, transparent 0, transparent 5px, #333 5px, #333 10px);
+            text-align: center;
+            margin: 10% auto;
+            font-size: 3em; /* Puedes ajustar el valor según tus preferencias */
+            color: white;
+            position: relative;
+            overflow: hidden;
+            background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el fondo */
+            background-position: center; /* Centra la imagen en el fondo */
+            background-repeat: no-repeat; /* Evita que la imagen se repita */
+            padding: 0px;
+        }
+
+
+ 
+        
+        :root {
+            
+            --bg: #3C465C;
+            --primary: #003770;
+            --solid: #fff;
+            --btn-w: 8em;
+            --dot-w: calc(var(--btn-w)*.2);
+            --tr-X: calc(var(--btn-w) - var(--dot-w));
+          }
+          * {box-sizing: border-box;}
+          *:before, *:after {box-sizing: border-box;}
+        h1 {
+            color: var(--solid);
+            font-size: 2.5rem;
+            margin-top: 0rem; 
+          }
+   
+          .btn {
+            position: relative;
+            margin: 0 auto;
+            background-color: #ffffff;
+            width: var(--btn-w);
+            color: var(--primary);
+            border: .15em solid var(--primary);
+            border-radius: 5em;
+            text-transform: uppercase;
+            text-align: center;
+            font-size: 1.3em;
+            line-height: 2em;
+            cursor: pointer;  
+          }
+          .dot {
+            content: '';
+            position: absolute;
+            top: 0;
+            width: var(--dot-w);
+            height: 100%;
+            border-radius: 100%;
+            transition: all 300ms ease;
+            display: none;
+          }
+          .dot:after {
+            content: '';
+            position: absolute;
+            left: calc(50% - .4em);
+            top: -.4em;
+            height: .8em;
+            width: .8em;
+            background: var(--primary);
+            border-radius: 1em;
+            border: .25em solid var(--solid);
+            box-shadow: 0 0 .7em var(--solid),
+                  0 0 2em var(--primary);
+          }
+          .btn:hover .dot,
+          .btn:focus .dot {
+            animation: atom 3s infinite linear;
+            display: block;
+          }
+          @keyframes atom {
+            0% {transform: translateX(0) rotate(0);}
+            30%{transform: translateX(var(--tr-X)) rotate(0);}
+            50% {transform: translateX(var(--tr-X)) rotate(180deg);}
+            80% {transform: translateX(0) rotate(180deg);}
+            100% {transform: translateX(0) rotate(360deg);}
+          }
+    </style>
+<div class="logo">
+
+</div>
 </head>
 <body>
-      
+    <header></header>
+    <h1>Ingenieria de Sistemas</h1>
+    <h2>Bienvenido</h2>
+   
+    <p>Simulación Sobre Gestión de Inventarios </p>
+
+<div class="container"> 
+ 
+    <div class="btn">
+      <span>Empezar</span>
+      <div class="dot"></div>
+    </div>
+  </div>
+    
 </body>
 </html>
