prueba con error

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,11 +1,29 @@
-<!DOCTYPE html>
-<html lang="es"> <!-- Puedes cambiar "es" por el código de idioma que desees -->
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulario</title>
-</head>
-<body>
-      
-</body>
-</html>
+<!-- modal.component.html -->
+<div class="modal">
+    <div class="modal-content">
+        <form id="simulation-form">
+            <div class="form-group">
+                <label for="numDias">Numero de Dias:</label>
+                <input class="form-control" type="number" id="numDias" name="numDias" value="10">
+            </div>
+        <br>
+            <div class="form-group">
+                <label for="horasTrabajo">Horas de Trabajo:</label>
+                <input class="form-control" type="number" id="horasTrabajo" name="horasTrabajo" value="8">
+            </div>
+        <br>
+            <div class="form-group">
+                <label for="precioRevista">Precio de venta:</label>
+                <input class="form-control" type="number" id="precioRevista" name="precioRevista" step="0.01" value="2.5">
+            </div>
+        <br>
+            <div class="form-group">
+                <label for="probabilidades">Probabilidades Acumuladas (separadas por comas):</label>
+                <input type="text" id="probabilidades" name="probabilidades" value="0.1,0.3,0.6,0.9,1.0">
+            </div>
+        <br>
+            <button type="button" id="simulate-button">Simular</button>
+        </form>
+    </div>
+  </div>
+  
