--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -1,51 +1,150 @@
+.box {
+  font-family: 'Raleway', sans-serif;
+  background: radial-gradient(circle at 50% 50%, #C20000, #003770), repeating-radial-gradient(circle, transparent 0, transparent 5px, #333 5px, #333 10px);
+  text-align: center;
+  margin: 0; /* Ajusta el margen a 0 para ocupar todo el espacio */
+  font-size: 2em;
+  color: white;
+  position: relative;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 0;
+  width: 100%; /* Ocupa todo el ancho disponible */
+  height: 100vh; /* Ocupa toda la altura de la ventana del navegador */
+}
 /* Estilos para el contenedor principal */
 .welcome-container {
-    background: linear-gradient(45deg, #e30113, #003770);
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  /* Estilos adicionales para el mensaje de bienvenida */
-  .system-engineering {
-    font-size: 24px;
-    font-weight: bold;
-    color: #ffffff;
-    text-align: center;
-  }
-  
-  /* Estilos para el encabezado de bienvenida */
-  .welcome-heading {
-    font-size: 48px;
-    color: #ffffff;
-    text-align: center;
-    margin-bottom: 20px;
-    font-weight: bold;
-  }
-  
-  /* Estilos para resaltar el nombre de la aplicación */
-  .investment-decisions {
-    font-size: 28px;
-    font-weight: bold;
-    color: #ffffff;
-    text-align: center;
-  }
-  
-  /* Estilos para el botón azul */
-  .blue-button {
-    font-weight: bold;
-    color: #ffffff;
-    text-align: center;
-    margin-top: 20px;
-    font-size: 24px;
-    background-color: #003770;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-  }
-  
-  .blue-button:hover {
-    background-color: #020202;
-  }
-  
+  background: linear-gradient(45deg, #e30113, #003770);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Estilos adicionales para el mensaje de bienvenida */
+.system-engineering {
+  font-size: 20px;
+  font-weight: bold;
+  color: #ffffff;
+  text-align: center;
+}
+
+/* Estilos para el encabezado de bienvenida */
+.welcome-heading {
+  font-size: 40px;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 20px;
+  font-weight: bold;
+}
+
+/* Estilos para resaltar el nombre de la aplicación */
+.investment-decisions {
+  font-size: 20px;
+  font-weight: bold;
+  color: #ffffff;
+  text-align: center;
+}
+
+/* Estilos para el botón azul */
+.blue-button {
+  font-weight: bold;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 20px;
+  font-size: 24px;
+  background-color: #003770;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.blue-button:hover {
+  background-color: #020202;
+}
+
+header {
+          background-image: url('LogoUMSS.png'); /* Reemplaza con la ruta de tu imagen */
+          background-size: 40%;
+          background-position: center;
+          background-repeat: no-repeat;
+          height: 250px; /* Ajusta la altura del encabezado según tus necesidades */
+          text-align: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: #fff; /* Color del texto para asegurar la legibilidad en el fondo */
+          margin: 0;
+      }
+
+
+    :root {
+        
+        --bg: #3C465C;
+        --primary: #003770;
+        --solid: #fff;
+        --btn-w: 8em;
+        --dot-w: calc(var(--btn-w)*.2);
+        --tr-X: calc(var(--btn-w) - var(--dot-w));
+      }
+      * {box-sizing: border-box;}
+      *:before, *:after {box-sizing: border-box;}
+    h1 {
+        color: var(--solid);
+        font-size: 2.5rem;
+        margin-top: 0rem; 
+      }
+
+      .btn {
+        position: relative;
+        margin: 0 auto;
+        background-color: #003770;
+        width: 40%; /* Cambia el valor para ajustar el ancho del botón */
+        color: var(--primary);
+        border: .15em solid var(--primary);
+        border-radius: 5em;
+        text-transform: uppercase;
+        text-align: center;
+        font-size: 1em;
+        line-height: 2em;
+        cursor: pointer;
+        letter-spacing: 0.1em; /* Ajusta el espaciado entre las letras */
+    }
+    
+      .dot {
+        content: '';
+        position: absolute;
+        top: 0;
+        width: var(--dot-w);
+        height: 100%;
+        border-radius: 100%;
+        transition: all 300ms ease;
+        display: none;
+      }
+      .dot:after {
+        content: '';
+        position: absolute;
+        left: calc(50% - .4em);
+        top: -.4em;
+        height: .8em;
+        width: .8em;
+        background: var(--primary);
+        border-radius: 1em;
+        border: .25em solid var(--solid);
+        box-shadow: 0 0 .7em var(--solid),
+              0 0 2em var(--primary);
+      }
+      .btn:hover .dot,
+      .btn:focus .dot {
+        animation: atom 3s infinite linear;
+        display: block;
+      }
+      @keyframes atom {
+        0% {transform: translateX(0) rotate(0);}
+        30%{transform: translateX(var(--tr-X)) rotate(0);}
+        50% {transform: translateX(var(--tr-X)) rotate(180deg);}
+        80% {transform: translateX(0) rotate(180deg);}
+        100% {transform: translateX(0) rotate(360deg);}
+      }
